Gets pokémon details when clicking on a pokémon card; fixed UI on smaller devices

--- a/src/app/components/pokemon-list/pokemon-list.component.css
+++ b/src/app/components/pokemon-list/pokemon-list.component.css
@@ -9,16 +9,9 @@ app-card{
     padding: 4px;
 }
 
-@media screen and (max-width: 500px){
-    app-card{
-        flex: 0 1 50%;
-        padding: 4px;
-    }
-}
-
 @media screen and (max-width: 800px){
     app-card{
-        flex: 0 1 25%;
+        flex: 0 1 50%;
         padding: 4px;
     }
 }
